--- a/templates/index.html
+++ b/templates/index.html
@@ -7,29 +7,40 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Is there Life on Mars??????</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/mainpage.css') }}">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='mainpage.css') }}">
 </head>
 
-<body>
+<body style="background-color:rgb(17, 17, 17);">
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>We don't know if there's life on Mars. But we do know.....</h1>
       <p>There's interesting facts. There's gorgeous hemispheres. There's amazing scenery.</p>
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Get Mars Data!</a></p>
     </div>
+  </div>
   <div class="container-fluid">
-    <div class="box">
-      <h2>Get to Know Mars</h2>
+    <div class="box" style = "background-color: white; width: 100%;">
+      <h2>Get to Know Mars!</h2>
       {{ mars_data.mars_facts_table | safe }}
     </div>
   </div>
-    <h3>Latest News Headline: {{ mars_data.latest_news_title }}</h3>
+  <!--figure out putting some space between these boxes-->
+  <div class="container-fluid" style="background-color: white; width: 50%;">
+    <h3>Latest <a href="https://mars.nasa.gov/news/">News</a> Headline: 
+      {{ mars_data.latest_news_title }}</h3>
+    <h4> {{ mars_data.latest_news_paragraph }} </h4>
+  </div>
+  <div class="container-fluid" style="background-color: white;">
     <h3>Most Recent Featured Photo <img src="{{mars_data.featured_image_url }}" > </h3>
     <br/>
+  </div>
+  <div class="container-fluid" style="background-color: white;">
     <h3>Ever wondered whar Mars' Hemispheres Look Like?</h3>
     <!--How to get these images to render? hemisphere_images is a subdictionary in the mars data dict...-->
     <img src = "{{mars_data.hemisphere_images[0]['img_url']}}">
-  </div>
+    <img src = "{{mars_data.hemisphere_images[1]['img_url']}}">
+    <img src = "{{mars_data.hemisphere_images[2]['img_url']}}">
+    <img src = "{{mars_data.hemisphere_images[3]['img_url']}}">
   </div>
 </body>
 
